# backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  deploy.yml  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: codeql.yml  deploy.yml  lint.yml  tests.yml
app/: asgi.py  main.py
app/api/dependencies/: database.py  session.py
app/api/middlewares/: session_middlewares.py
app/api/routes/v1/: api_v1.py  donor_route.py  ping_route.py  session_route.py  sponsor_route.py  user_route.py
app/api/services/: base.py  donor.py  sponsor.py  user.py
app/core/: config.py  logging.py  tasks.py
app/db/: models.py  tasks.py
app/db/migrations/: env.py
app/db/migrations/versions/: 9e80affcafdf_create_tables.py  a0d471234f42_create_tables.py  b075a76edba9_remove_unique_constrain_user_picture.py  bfafc0702910_create_tables.py
app/db/repositories/: base.py
app/models/: core.py  ping.py
app/schemas/: donor.py  sponsor.py  user.py
tests/: conftest.py  test_donor.py  test_example.py  test_session.py  test_sponsor.py  test_user.py
